--- a/1.html
+++ b/1.html
@@ -20,30 +20,10 @@
             <h2>HTML이란 무엇인가</h2>
             <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="HTML5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
             web browsers receivee HTML documents from a web server or from local storage and render them into multimedia web pages.
-            HTML describes the structure of a web page semantically and originally included cues for the appearance of the documents.<img src="coding1.jpg" width="40%" height="500"></p>
+            HTML describes the structure of a web page semantically and originally included cues for the appearance of the documents.
             <p>HTML elements are the building block of HTML pages.
             with HTML constructs, images and other object, such as interactive forms, may be embedded into the rendered page.
             It provides a means to create structured documents by denoting structural semantics for text such as heading, paragraphs, list, link, quotes and other items.
             HTML elements are delineated by tags, written using angle brackets.</p>
-            <table>
-              <tr>
-                <td>head</td>
-                <td>98.1%</td>
-              </tr>
-              <tr>
-                <td>body</td>
-                <td>97.9%</td>
-              </tr>
-              <tr>
-                <td>html</td>
-                <td>97.9%</td>
-              </tr>
-            </table>
-            <h1> shining like crystal</h1>
-            <h2> shining like crystal</h2>
-            <h3> shining like crystal</h3>
-            <h4> shining like crystal</h4>
-            <h5> shining like crystal</h5>
-            <h6> shining like crystal</h6>
          </body>
      </html>
